# turbine

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
.claude/: CLAUDE.md
examples/todo-api/: turbine.yaml
src/: cli.ts  index.ts  orchestrator.ts
src/core/: decide.ts  evolve.ts  types.ts
src/persistence/: event-log.ts
src/scaffolding/: gap-identifier.ts  generator.ts  index.ts  orchestrator.ts  spec-parser.ts  template-engine.ts
src/scaffolding/adapters/: base.ts  fastify.ts  prisma.ts  react.ts
src/shell/: interpreter.ts  llm-adapter.ts  telemetry.ts
turbine/: __init__.py  cli.py  generator.py  spec.py
